[tool.poetry]
name = "learn_async_concurrency"
version = "0.1.0"
description = "Читаю книгу - Asyncio и конкурентное программирование на Python. Автор: Мэттью Фаулер"
authors = ["Ivan Grubov <gruivanvik@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
aiohttp = "^3.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
